RESOLVED FIXED 151880
Modern IDB: Flip test expectations around so we only list failures
https://bugs.webkit.org/show_bug.cgi?id=151880
Summary Modern IDB: Flip test expectations around so we only list failures
Brady Eidson
Reported 2015-12-04 12:28:40 PST
Modern IDB: Flip test expectations around so we only list failures We've reached the point where well over half the tests pass, and I just did a run to gather a list of failures. The TestExpectations file should list the remaining failures, categorized by Crash, Timeout, or Text diff.
Attachments
Patch v1 (14.90 KB, patch)
2015-12-04 15:55 PST, Brady Eidson
achristensen: review+
Brady Eidson
Comment 1 2015-12-04 15:09:44 PST
There's some unfortunate flakes in the full list of tests that affect other tests, as well as some real bugs that prevent this being done on any scale without code changes. So the patch will be a bit more than just TestExpectations changes.
Brady Eidson
Comment 2 2015-12-04 15:55:39 PST
Created attachment 266672 [details] Patch v1
WebKit Commit Bot
Comment 3 2015-12-04 15:57:23 PST
Attachment 266672 [details] did not pass style-queue: WARNING: Not running on native Windows. ERROR: LayoutTests/platform/mac-wk1/TestExpectations:85: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:99: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:112: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:114: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:116: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:119: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:120: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:124: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:125: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:129: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:131: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:133: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:134: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:141: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:142: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:145: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:150: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:152: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:154: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:160: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:161: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:162: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:164: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:165: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:166: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:167: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:171: Line contains tab character. [whitespace/tab] [5] ERROR: LayoutTests/platform/mac-wk1/TestExpectations:173: Line contains tab character. [whitespace/tab] [5] Total errors found: 28 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 4 2015-12-04 16:02:12 PST
I fixed the tab issue locally. Won't bother re-uploading a patch as it doesn't change the review.
Alex Christensen
Comment 5 2015-12-04 16:06:43 PST
Comment on attachment 266672 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=266672&action=review > LayoutTests/platform/mac-wk1/TestExpectations:-60 > # Legacy IndexedDB will never be enabled in Mac WK1. > -storage/indexeddb yay!
Brady Eidson
Comment 6 2015-12-04 16:32:18 PST
Note You need to log in before you can comment on or make changes to this bug.